src/objects/smagicinteract__Filter_Setting__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__List_View_Configuration__c</fullName>
        <label>List View Configuration</label>
        <referenceTo>smagicinteract__List_View_Configuration__c</referenceTo>
        <relationshipLabel>Filter Settings</relationshipLabel>
        <relationshipName>Filter_Settings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Operator__c</fullName>
        <label>Operator</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Filter Setting</label>
    <listViews>
        <fullName>smagicinteract__All</fullName>
        <columns>smagicinteract__List_View_Configuration__c</columns>
        <columns>NAME</columns>
        <columns>smagicinteract__Field_Name__c</columns>
        <columns>smagicinteract__Field_Value__c</columns>
        <columns>smagicinteract__Operator__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Filter Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filter Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>